🪛 fix full screen image on mobile

--- a/docs/user_manual/src/app/image-viewer/image-outlet/image-outlet.component.scss
+++ b/docs/user_manual/src/app/image-viewer/image-outlet/image-outlet.component.scss
@@ -23,3 +23,9 @@
 
   z-index: 1001;
 }
+
+.image {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+}
